# AltairChessEngine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  attacks.h  bench.cpp  bench.h  bitboard.cpp  bitboard.h  changelog  changelog.md  constants.h  evaluation.cpp  evaluation.h  evaluation_constants.h  fixed_vector.h  main.cpp  makefile  mcts.cpp  mcts.h  move.cpp  move.h  move_generator.cpp  move_generator.h  move_ordering.cpp  move_ordering.h  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  search.cpp  search.h  see.cpp  see.h  tables.h  test.sh  types.h  uci.cpp  (+4 more)
src/: altair_bullet_cfg.rs  attacks.h  bench.cpp  bench.h  bitboard.cpp  bitboard.h  constants.h  datagen.cpp  datagen.h  evaluation.cpp  evaluation.h  evaluation_classic.cpp  evaluation_classic.h  evaluation_constants.h  fixed_vector.h  incbin.h  main.cpp  move.cpp  move.h  move_ordering.cpp  move_ordering.h  move_ordering.inl  nnue.cpp  nnue.h  perft.cpp  perft.h  position.cpp  position.h  position.inl  random.h  search.cpp  search.h  search_parameters.h  see.cpp  see.h  simd.h  tables.h  timeman.cpp  timeman.h  types.h  (+6 more)
tests/: maxheap_test.cpp
